pci-dss/workload/generic/network-ingress/pci-policy-10.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: monitor-network-resources
spec:
  endpointSelector: 
  matchLabels: {}
  ingress:
    - fromEndpoints:
      toPorts:
        - ports:
            - port: "514 "
              protocol: TCP
        - ports:
            - port: "3306"
              protocol: TCP
        - ports:
            - port: "1433"
              protocol: TCP
        - ports:
            - port: "23"
              protocol: TCP
